--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li>Hello New Element</li>
         </ul>
     </nav>
     
